# MusicPlayer

./: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Order of Project.txt  PlayerControls.cpp  PlayerControls.h  PlaylistManager.cpp  PlaylistManager.h  README.md  main.cpp
